[gd_scene load_steps=3 format=3 uid="uid://buuuo5iruj8td"]

[ext_resource type="Script" path="res://scripts/PauseMenu.gd" id="1_snr2p"]
[ext_resource type="Texture2D" uid="uid://ci7bt1jo415r2" path="res://assets/imgs/hvad_fuck_sker_der.jpg" id="2_rwax1"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_snr2p")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(578, 325)
scale = Vector2(1.08519, 1.08519)
texture = ExtResource("2_rwax1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -79.0
offset_right = 79.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Change grav"

[node name="MenuButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "Earth"
popup/item_0/id = 0
popup/item_1/text = "Moon"
popup/item_1/id = 1
popup/item_2/text = "Mars"
popup/item_2/id = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Go back"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu
"

[connection signal="item_selected" from="VBoxContainer/HBoxContainer/MenuButton" to="." method="_on_menu_button_item_selected"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
